Separated css,js, and html files to separate folders

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,9 +10,9 @@
     <![endif]-->
     <title>ES50</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/assets/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="js/respond.js"></script>
+    <script src="js/assets/respond.js"></script>
 
 </head>
 <body style="font-family:Verdana">
@@ -140,7 +140,7 @@
 <!--end of footer-->
 
 <script src="socket.io/socket.io.js"></script>
-<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/assets/jquery-2.1.1.min.js"></script>
 <script src="js/customchat.js"></script>
 
 </body>
