--- a/public/login.html
+++ b/public/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/assets/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="js/respond.js"></script>
+    <script src="js/assets/respond.js"></script>
 </head>
 <body>
 <div id="welcome">
@@ -32,8 +32,8 @@
 
 <!-- javascript -->
 <script src="socket.io/socket.io.js"></script>
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/assets/jquery-2.1.1.min.js"></script>
+<script src="js/assets/bootstrap.min.js"></script>
 <script src="js/customlogin.js"></script>
 
 
