--- a/public/chat.html
+++ b/public/chat.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="description" content=""/>
@@ -8,11 +9,15 @@
     <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-    <title>ES50</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="css/assets/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-    <script src="js/assets/respond.js"></script>
+
+    <title>theHarvardClass</title>
+
+    <!-- loads bootstrap.css -->
+    <!-- <link href="css/assets/bootstrap.min.css" rel="stylesheet"> : Offline Version -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+    <!-- loads custom css file -->
+    <link rel="stylesheet" href="css/custom.css" rel="stylesheet">
 
 </head>
 <body style="font-family:Verdana">
@@ -139,9 +144,27 @@
 </div>
 <!--end of footer-->
 
-<script src="socket.io/socket.io.js"></script>
-<script src="js/assets/jquery-2.1.1.min.js"></script>
-<script src="js/customchat.js"></script>
+
+
+<!-- JAVASCRIPT -->
+
+<!-- socket.io javascript -->
+<script type="text/javascript" src="socket.io/socket.io.js"></script>
+
+<!-- jquery -->
+<!-- <script src="js/assets/jquery-2.1.1.min.js"></script> = Offline version -->
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+<!-- Boostrap.js -->
+<!-- <script src="js/assets/bootstrap.min.js"></script> = Offline Version -->
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+<!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
+<!-- <script src="js/assets/respond.js"></script> = Offline Version -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+
+<!-- customchat javascript file: should be loaded after jquery-->
+<script type="text/javascript" src="js/customchat.js"></script>
 
 </body>
 </html>
