--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -26,50 +26,55 @@
 
     </script>
 
-    <!-- loads bootstrap.css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- loads bootstrap css -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
     <!--loads font awesome-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
-    <!-- loads stylesheet for form bootstrap validator plugin -->
+    <!--normalize.css-->
+    <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
+
+    <!-- bootstrap validator css -->
     <link rel="stylesheet"
           href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
+
 </head>
 
 <body>
 
 <!--start of nav-->
-
-<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
-<div class="navbar navbar-inverse navbar-static-top">
-
-    <!--'container' div makes sure our content is well centered on the screen-->
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> HarvardClass</a>
-
-        <!--button to target the navbar-right which will appear on collapse of navbar items-->
-        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
-
-            <!--create the breadcrumb-->
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-
-        </button>
+        <div class="navbar-header">
+            <!--button to target the navbar-right which will appear on collapse of navbar items-->
+            <button type="button" class='navbar-toggle collapsed' data-toggle="collapse"
+                    data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                HarvardClass
+            </a>
+        </div>
 
         <!--this navbar will be collapsed on mobile-->
         <div class="collapse navbar-collapse navHeaderCollapse">
-
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
                 <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
-                <li id='signInName'><a href="#">About</a></li>
+                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
     </div>
 </div>
 <!--end of nav-->
+
+
 
 <!--start of jumbotron-->
 <div class='container'>
@@ -77,18 +82,12 @@
     <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
-        <h1>ERROR</h1>
+        <h3>ERROR</h3>
 
-        <p>We apologize, an error occurred on our side while handling your request. The details have been sent to our administrators and we will investigate shortly</p>
-        <p>This might have happened due to a number of reasons including:</p>
-        <ul>
-            <li>The request sent not matching any available services</li>
-            <li>Error while processing your request</li>
-        </ul>
-        <p>In the mean time, please retry your request as it may have been temporary</p>
+        <p>We apologize, an error occurred on our side while handling your request. The details have been sent to our
+            administrators and we will investigate shortly</p>
 
-        <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
-        <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
+        <p>In the mean time, please retry your request as it may have been a temporary problem</p>
 
     </div>
 
@@ -111,13 +110,9 @@
 
 <!--start of footer-->
 <div class='navbar navbar-default navbar-fixed-bottom'>
-    <!--'container div makes sure of correct alignment-->
     <div class="container">
-
-        <!--the class navbar-text makes sure that the text is correctly centerd in the navbar-->
-        <!--the class pull-left floats the buttons to the left-->
         <p class="navbar-text pull-left">
-            Site Built By Jovin Mwilanga:
+            <i class="fa fa-copyright"></i> 2015 jbm
             <a href="https://www.google.com/+JovinMwilanga" target="_blank">
                 <i class="fa fa-google-plus-square"></i>
             </a>
@@ -129,10 +124,10 @@
             </a>
         </p>
 
-        <!--the class navbar-btn styles the buttons for the nav-->
-        <!--the class pull-right floats the buttons to the right-->
         <div class="pull-right">
-            <a class="navbar-btn btn btn-warning btn-xs">Status: Development</a>
+            <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
+            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an
+                Email</a>
         </div>
     </div>
 </div>
@@ -140,22 +135,21 @@
 
 
 <!-- JAVASCRIPT -->
-
 <!-- jquery -->
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<!-- Boostrap.js -->
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
-<!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-
-<!-- loads jquery cookie plugin -->
+<!-- Bootstrap.js -->
 <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+        src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+<!-- loads respondJS: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- loads jquery for bootstrapvalidator plugin -->
 <script type="text/javascript"
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
+
+<!--modal validator plugin-->
+<script type="text/javascript" src="/public/js/custom_plugin.js"></script>
 </body>
 </html>
