modified and updated error pages

--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
+    <meta name="description" content="Harvard Question and Answer Website"/>
     <meta name="author" content="Jovin Mwilanga"/>
-    <title>ERROR 500</title>
+    <link rel="author" href="https://plus.google.com/+JovinMwilanga"/>
 
     <!--google analytics-->
     <script>
@@ -38,9 +39,7 @@
     <!--normalize.css-->
     <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
 
-    <!-- bootstrap validator css -->
-    <link rel="stylesheet"
-          href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
+    <title>ERROR</title>
 
 </head>
 
@@ -73,7 +72,6 @@
     </div>
 </div>
 <!--end of nav-->
-
 
 
 <!--start of jumbotron-->
@@ -125,9 +123,7 @@
         </p>
 
         <div class="pull-right">
-            <a class="navbar-btn btn btn-warning btn-xs hidden-xs">Status: Development</a>
-            <a href="#myModal" role="button" class="navbar-btn btn btn-info btn-xs" data-toggle="modal">Shoot Me an
-                Email</a>
+            <a class="navbar-btn btn btn-warning btn-xs">Status: Development</a>
         </div>
     </div>
 </div>
@@ -145,11 +141,5 @@
 <!-- loads respondJS: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<!-- loads jquery for bootstrapvalidator plugin -->
-<script type="text/javascript"
-        src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
-
-<!--modal validator plugin-->
-<script type="text/javascript" src="/public/js/custom_plugin.js"></script>
 </body>
 </html>
