--- a/public/error/error.html
+++ b/public/error/error.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Harvard Website to ask questions in class"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
+    <meta name="description" content="Harvard Question and Answer Website"/>
     <meta name="author" content="Jovin Mwilanga"/>
-    <title>HarvardClass - Login</title>
+    <link rel="author" href="https://plus.google.com/+JovinMwilanga"/>
 
     <!--google analytics-->
     <script>
@@ -26,45 +27,45 @@
 
     </script>
 
-    <!-- loads bootstrap.css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- loads bootstrap css -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
     <!--loads font awesome-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- loads stylesheet for form bootstrap validator plugin -->
     <link rel="stylesheet"
-          href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+
+    <!--normalize.css-->
+    <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
+
+    <title>HarvardClass - Maintenance</title>
 </head>
 
 <body>
 
 <!--start of nav-->
-
-<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
-<div class="navbar navbar-inverse navbar-static-top">
-
-    <!--'container' div makes sure our content is well centered on the screen-->
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> HarvardClass</a>
-
-        <!--button to target the navbar-right which will appear on collapse of navbar items-->
-        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
-
-            <!--create the breadcrumb-->
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-
-        </button>
+        <div class="navbar-header">
+            <!--button to target the navbar-right which will appear on collapse of navbar items-->
+            <button type="button" class='navbar-toggle collapsed' data-toggle="collapse"
+                    data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                HarvardClass
+            </a>
+        </div>
 
         <!--this navbar will be collapsed on mobile-->
         <div class="collapse navbar-collapse navHeaderCollapse">
-
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
                 <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
-                <li id='signInName'><a href="#">About</a></li>
+                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
     </div>
@@ -81,9 +82,6 @@
 
         <p>"We have enriched the way people ask questions in class. Harvard Class was built with one goal only: To
             bring a more dynamic Q/A classroom environment between the professor and students"</p>
-
-        <a class="btn btn-default"><i class="fa fa-info-circle"></i> About Us</a>
-        <a class="btn btn-default"><i class="fa fa-question"></i> Help</a>
 
     </div>
 
@@ -107,13 +105,9 @@
 
 <!--start of footer-->
 <div class='navbar navbar-default navbar-fixed-bottom'>
-    <!--'container div makes sure of correct alignment-->
     <div class="container">
-
-        <!--the class navbar-text makes sure that the text is correctly centerd in the navbar-->
-        <!--the class pull-left floats the buttons to the left-->
         <p class="navbar-text pull-left">
-            Site Built By Jovin Mwilanga:
+            <i class="fa fa-copyright"></i> 2015 jbm
             <a href="https://www.google.com/+JovinMwilanga" target="_blank">
                 <i class="fa fa-google-plus-square"></i>
             </a>
@@ -125,8 +119,6 @@
             </a>
         </p>
 
-        <!--the class navbar-btn styles the buttons for the nav-->
-        <!--the class pull-right floats the buttons to the right-->
         <div class="pull-right">
             <a class="navbar-btn btn btn-warning btn-xs">Status: Development</a>
         </div>
@@ -136,19 +128,15 @@
 
 
 <!-- JAVASCRIPT -->
-
 <!-- jquery -->
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<!-- Boostrap.js -->
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
-<!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-
-<!-- loads jquery cookie plugin -->
+<!-- Bootstrap.js -->
 <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+        src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+<!-- loads respondJS: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- loads jquery for bootstrapvalidator plugin -->
 <script type="text/javascript"
@@ -156,7 +144,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#harvardIdLoginForm').submit(function(event){
+        $('#harvardIdLoginForm').submit(function (event) {
             event.preventDefault();
         });
     })
