--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -36,8 +36,12 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
-    <!--normalize.css-->
-    <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
+    <style>
+        body {
+            padding-top: 70px;
+            padding-bottom: 140px;
+        }
+    </style>
 
     <title>ERROR</title>
 
