More fix on error pages, to fit iphone 4 screen

--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -40,6 +40,13 @@
         body {
             padding-top: 70px;
             padding-bottom: 140px;
+            font-size: 12px;
+        }
+
+        .jumbotron {
+            font-size: 12px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
     </style>
 
@@ -86,10 +93,8 @@
 
         <h3>ERROR</h3>
 
-        <p>We apologize, an error occurred on our side while handling your request. The details have been sent to our
-            administrators and we will investigate shortly</p>
-
-        <p>In the mean time, please retry your request as it may have been a temporary problem</p>
+        <p>We apologize, an error occurred while handling your request. The details have been sent to our
+            administrators and the issue will be investigated shortly.</p>
 
     </div>
 
