Removed unnecessary comments on error pages

--- a/public/error/error.html
+++ b/public/error/error.html
@@ -79,7 +79,6 @@
 <!--start of jumbotron-->
 <div class='container'>
 
-    <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
         <h1>HARVARD CLASS</h1>
@@ -99,9 +98,7 @@
 </div>
 <!--end of jumbotron-->
 
-<!--start of login error message-->
-
-<!--to hide use:  style="display: none"-->
+<!--start of error message-->
 <div class="container text-center hidden-xs">
     <form>
         <button type="submit" class="btn btn-default btn-danger btn-lg btn-block" id="harvardID">The site is currently
