--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -88,7 +88,6 @@
 <!--start of jumbotron-->
 <div class='container'>
 
-    <!--the text-center class centers everything in it-->
     <div class="jumbotron text-center">
 
         <h3>ERROR</h3>
@@ -101,14 +100,9 @@
 </div>
 <!--end of jumbotron-->
 
-<!--start of login error message-->
-
-<!--to hide use:  style="display: none"-->
+<!--start of error message-->
 <div class="container text-center">
-    <form id="harvardIdLoginForm" action="/login.html" method="get">
-
-        <input type="hidden" name="openid_identifier" value="https://id.cs50.net/"/>
-
+    <form>
         <button type="submit" class="btn btn-default btn-info btn-lg btn-block" id="harvardID">Click here to go back
         </button>
     </form>
