--- a/public/error/error500.html
+++ b/public/error/error500.html
@@ -102,7 +102,7 @@
 
 <!--start of error message-->
 <div class="container text-center">
-    <form>
+    <form action="/login.html" method="get">
         <button type="submit" class="btn btn-default btn-info btn-lg btn-block" id="harvardID">Click here to go back
         </button>
     </form>
