--- a/public/error/404.html
+++ b/public/error/404.html
@@ -15,7 +15,7 @@
 
     <!--loads font awesome-->
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+          href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <style>
         body {
