--- a/public/error/errorMaintainance.html
+++ b/public/error/errorMaintainance.html
@@ -12,7 +12,7 @@
 
     <!--loads font awesome-->
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+          href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!--normalize.css-->
     <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
